fix(mobile): fixes wrong width causing horizontal scrollbar (refs #173)

--- a/client/src/components/preview/ArticlePage.scss
+++ b/client/src/components/preview/ArticlePage.scss
@@ -159,6 +159,7 @@
   .ArticlePrevNextInline {
     margin-bottom: $gap3;
     margin-top: $gap5;
+    overflow: hidden;
   }
 
   .ArticlePrevInline,
